---
title: Hotkey and Remap
---
classDiagram
direction TB
    class FileAccess {
	    ファイルのアクセス
    }
    class HotkeyAndRemapMapLoader {
	    hotkeyとremapとhotstringマップのロード、トリガーの判定(vkによる判定処理) 、アクションの実行
    }
    class KeyMapLoader {
	    vkとキーネームのmap
    }
    class KeyboardHookManager {
	    SetWindowHookExでキー全体にフック
    }
    class HotkeyActionFuncs {
	    hotkeyの実行関数定義
    }
    class RemapActionFuncs {
	    remapの実行関数定義
    }
    class KeystringActionFuncs {
	    Keystringの実行関数定義
    }
    class main {
	    mainファイル
    }
    class KeyLogger {
	    keylog機能
    }

    FileAccess <|-- HotkeyAndRemapMapLoader
    FileAccess <|-- KeyMapLoader
    KeyMapLoader <|-- HotkeyAndRemapMapLoader
    KeyboardHookManager <|-- KeystringActionFuncs
    KeyboardHookManager <|-- RemapActionFuncs
    KeystringActionFuncs <|-- HotkeyAndRemapMapLoader
    KeyLogger <|-- HotkeyAndRemapMapLoader
    RemapActionFuncs <|-- HotkeyAndRemapMapLoader
    HotkeyActionFuncs <|-- HotkeyAndRemapMapLoader
    HotkeyAndRemapMapLoader <|-- main
